получение пользователя по id
