# internal/oas/oas_router_gen.go
@@ -238,13 +238,43 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 					switch r.Method {
 					case "GET":
 						s.handleGetUserRequest([0]string{}, elemIsEscaped, w, r)
+					case "PUT":
+						s.handleUpdateUserRequest([0]string{}, elemIsEscaped, w, r)
 					default:
-						s.notAllowed(w, r, "GET")
+						s.notAllowed(w, r, "GET,PUT")
 					}
 
 					return
 				}
 				switch elem[0] {
+				case '/': // Prefix: "/"
+					origElem := elem
+					if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					// Param: "userId"
+					// Leaf parameter
+					args[0] = elem
+					elem = ""
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch r.Method {
+						case "GET":
+							s.handleGetUserByIdRequest([1]string{
+								args[0],
+							}, elemIsEscaped, w, r)
+						default:
+							s.notAllowed(w, r, "GET")
+						}
+
+						return
+					}
+
+					elem = origElem
 				case 's': // Prefix: "s"
 					origElem := elem
 					if l := len("s"); len(elem) >= l && elem[0:l] == "s" {
@@ -597,11 +627,49 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 						r.args = args
 						r.count = 0
 						return r, true
+					case "PUT":
+						r.name = UpdateUserOperation
+						r.summary = "Обновление текущего пользователя"
+						r.operationID = "updateUser"
+						r.pathPattern = "/user"
+						r.args = args
+						r.count = 0
+						return r, true
 					default:
 						return
 					}
 				}
 				switch elem[0] {
+				case '/': // Prefix: "/"
+					origElem := elem
+					if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					// Param: "userId"
+					// Leaf parameter
+					args[0] = elem
+					elem = ""
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch method {
+						case "GET":
+							r.name = GetUserByIdOperation
+							r.summary = "получение пользователя по id"
+							r.operationID = "getUserById"
+							r.pathPattern = "/user/{userId}"
+							r.args = args
+							r.count = 1
+							return r, true
+						default:
+							return
+						}
+					}
+
+					elem = origElem
 				case 's': // Prefix: "s"
 					origElem := elem
 					if l := len("s"); len(elem) >= l && elem[0:l] == "s" {
